Minor edit to fix word wrap on long links with Firefox

--- a/app/assets/stylesheets/_base.css.sass
+++ b/app/assets/stylesheets/_base.css.sass
@@ -94,6 +94,7 @@ table tr td,
   -webkit-hyphens: auto
   -moz-hyphens: auto
   hyphens: auto
+  word-wrap: break-word
   overflow-wrap: break-word
 
 .widget .columns:first-child
